<resources>
    <string name="app_name">e-Kalyan</string>
    <string name="app_version">App Version 1.0</string>
    <string name="update">Update</string>
    <string name="ignore">Ignore</string>
    <string name="ok">OK</string>
    <string name="wrong_device_title">गलत डिवाइस !</string>
    <string name="authentication_failed">Authentication Failed !</string>
    <string name="wrong_device_text">This device is not registered in your account !</string>
    <string name="server_down_title">Internet / Server Down  !</string>
    <string name="server_down_text">इंटरनेट कनेक्शन उपलब्ध नहीं !</string>
    <string name="login">लॉग इन करें</string>
    <string name="logout">लॉग आउट करें</string>
    <string name="Sync">सिंक्रनाइज़ करें</string>
    <string name="username">User Name </string>
    <string name="userId">यूज़र आईडी</string>
    <string name="pass">पासवर्ड</string>
    <string name="enter_username">Enter User Name</string>
    <string name="enter_userId">यूज़र आईडी दर्ज करें</string>
    <string name="enter_pass">पासवर्ड दर्ज करें</string>
    <string name="hostal_img">-------- छात्रावास का फोटो खिचें --------</string>
    <string name="hostalimg">छात्रावास का फोटो खिचें</string>
    <string name="Student_img">-------- छात्र का एवं जाती प्रमाण पत्र का फोटो खिचें --------</string>
    <string name="District_Wise_Insp">-------- छात्रावास का निरीक्षण करें--------</string>
    <string name="hostal_Deatils">-------- छात्रावास का निरीक्षण का फोटो खिचें  --------</string>
    <string name="loading_fail"> लोडिंग फेल !</string>
    <string name="failed">Fail !</string>
    <string name="login_failed">गलत उपयोगकर्ता आईडी / पासवर्ड</string>
    <string name="no_internet_connection">इंटरनेट कनेक्शन नहीं है   </string>
    <string name="enable_internet_for_firsttime">कृप्या पहली बार के लिए इंटरनेट कनेक्शन ऑन करें !</string>
    <string name="turnon_internet">कृप्या  इंटरनेट कनेक्शन ऑन करें  </string>
    <string name="continue_offline">ऑफलाइन काम करें    </string>
    <string name="authenticating">सत्यापन हो रहा है ...</string>
    <string name="username_password_notmatched">The name or password of the user is not correct !</string>
    <string name="Dept">विभाग : </string>
    <string name="Dist">जिला : </string>
    <string name="Blk">प्रखंड : </string>
    <string name="Hostal">छात्रावास : </string>
    <string name="name">नाम : </string>
    <string name="StdFname">पिता का नाम : </string>edit
    <string name="edit">एडिट</string>
    <string name="enrty">न्यू एन्ट्री</string>
    <string name="upload">अपलोड</string>
    <string name="pendingdata">पेंडिंग रिकॉर्ड = </string>
    <string name="submit">संरक्षित करें</string>
    <string name="schemes">योजनाएँ</string>
    <string name="id">आईडी : </string>
    <string name="stdphoto">फोटो खिचें : </string>
    <string name="stdccphoto">कास्ट प्रमाणपत्र का फोटो खिचें : </string>
    <string name="photwithclidren">शिक्षक के साथ बच्चों का फोटो खिचें : </string>
    <string name="photwithworkinman">कामकाजी आदमी के साथ मेष / रसोईघर का फोटो खिचें : </string>
    <string name="photwithgoods">समान के साथ स्टोर रूम का फोटो खिचें : </string>
    <string name="photofhostel">छात्रावास का फोटो खिचें : </string>
    <string name="editshow">प्रतिवेदन दर्ज की गई सूची  </string>
    <string name="hostlist">छात्रावास की सूची  </string>
    <string name="uploading">uploading</string>
    <string name="confirmation">पुष्टि करें</string>
    <string name="upload_files_to_the_server">अपलोड करें </string>
    <string name="edit2">सुधार  करें</string>

</resources>
