<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chatrawasbg"
    tools:context=".activty.Login_Activity">


    <LinearLayout
        android:id="@+id/ll_foot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <include layout="@layout/footer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/textView"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="15dp"
            android:textSize="25dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/txt_dep_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="EBC Department"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="#000000"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/buttonshape"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userId"
                    android:textColor="#222222"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/edt_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textboxshape1"
                    android:hint="@string/enter_userId"
                    android:textColorHint="#999797"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapCharacters"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#222222"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pass"
                    android:textColor="#222222"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_Pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textboxshape1"
                    android:hint="@string/enter_pass"
                    android:textColorHint="#999797"

                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#222222"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bluegradientbuttonshape"
                    android:padding="1dp"
                    android:text="@string/login"
                    android:onClick="Login"
                    android:textColor="#ffffff"
                    android:textSize="17sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/app_version"
                android:textColor="#f16b54"
                android:textSize="15sp"
                android:typeface="serif" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="100dp"
            android:background="@drawable/chatrawas" />

    </FrameLayout>

</RelativeLayout>