<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <include
            android:id="@+id/header"
            layout="@layout/commanheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_foot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/footer" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_header"
            android:background="@drawable/infobg"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:id="@+id/ll_hostal_details">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtDistName"
                    style="@style/UserDeatial"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/txt_Std_Name"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:textColor="#03384B"
                    android:layout_weight="1" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtstfname"
                    style="@style/UserDeatial"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/StdFname" />

                <TextView
                    android:id="@+id/txt_Std_FName"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:textColor="#03384B"
                    android:layout_weight="1" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_facility"
                    style="@style/UserDeatial"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/Hostal" />

                <TextView
                    android:id="@+id/txt_hostal_Name"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:textColor="#03384B"
                    android:layout_weight="1" />


            </LinearLayout>

        </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_hostal_details"
        android:layout_above="@+id/ll_foot"
        android:layout_margin="10dp"
        android:layout_marginBottom="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:background="@drawable/lin_background"
            android:orientation="vertical"
            android:id="@+id/lin_aadharno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:padding="5dp"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_weight="0.3"
                android:text="@string/stdphoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/linimg1"
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_margin="10dp"
                    android:background="@drawable/bluegradientbuttonshape"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">
                    <ImageView
                        android:gravity="center"
                        android:id="@+id/Btn_Student"
                        android:src="@drawable/camera"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout

            android:layout_marginTop="5dp"
            android:background="@drawable/lin_background"
            android:orientation="vertical"
            android:id="@+id/lin_aadharnos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:padding="5dp"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_weight="0.3"
                android:text="@string/stdccphoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout

                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_margin="10dp"
                    android:background="@drawable/bluegradientbuttonshape"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">
                    <ImageView
                        android:id="@+id/btn_cast"
                        android:src="@drawable/camera"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:padding="10sp"
            android:background="@drawable/bluegradientbuttonshape"
            android:id="@+id/button_ok"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    </ScrollView>

</RelativeLayout>