<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/listview_bg"
    android:padding="5dip" >


  <!--  <TextView
        android:id="@+id/lblBenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="date"
        android:layout_marginRight="5dip"
        android:textSize="9dip"
        android:textColor="#80343434"
        android:textStyle="bold"/>-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll_benId">
    <TextView
        android:id="@+id/lblBen_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_marginTop="8dp"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="16dip"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_Ben_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#343434"
        android:textSize="13dip"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="8dip"
        android:text="New Text" />
</LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/ll_ben_Name"
      android:layout_below="@+id/ll_benId">
    <TextView
        android:id="@+id/lblBenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="8dp"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="16dip"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_Ben_Name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColor="#343434"
        android:textSize="13dip"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="8dip"
        android:text="New Text" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/ll_ben_FName"
      android:layout_below="@+id/ll_ben_Name">
    <TextView
        android:id="@+id/lblBenFHName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StdFname"
        android:layout_marginTop="8dp"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="16dip"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_Ben_FH_Name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColor="#343434"
        android:textSize="13dip"
        android:layout_marginTop="8dip"
        android:layout_marginLeft="1dp"
        android:text="New Text" />
  </LinearLayout>

    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>

  <ImageView android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/done"
      android:layout_alignParentRight="true"
      android:layout_marginRight="50dp"
      android:id="@+id/img_done"
      android:visibility="gone"
      android:layout_marginTop="15dp"
   />
  <ImageView android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/done"
      android:layout_alignParentRight="true"
      android:layout_marginRight="50dp"
      android:id="@+id/img_done_cast"
      android:visibility="gone"
      android:layout_marginTop="55dp"
      />

</RelativeLayout>
