<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activty.Hostal_Deatil_Entry_Activity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <include
            android:id="@+id/header"
            layout="@layout/commanheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_foot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/footer" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_header"
        android:background="@drawable/infobg"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:id="@+id/ll_hostal_details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_Hostel"
                style="@style/UserDeatial"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtDistName"
                style="@style/UserDeatial"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Dist" />

            <TextView
                android:id="@+id/txt_DistName"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textColor="#03384B"
                android:layout_weight="1" />


        </LinearLayout>

    </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_hostal_details"
        android:layout_above="@+id/ll_foot"
        android:layout_margin="10dp"
        android:layout_marginBottom="2dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:background="@drawable/lin_background"
            android:orientation="vertical"
            android:id="@+id/ll_Childteacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:padding="5dp"
                android:layout_weight="0.3"
                android:text="@string/photwithclidren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_gravity="center"
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="10dp"
                    android:background="@drawable/bluegradientbuttonshape"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">
                    <ImageView
                        android:id="@+id/btn_child_teacher"
                        android:src="@drawable/camera"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:background="@drawable/lin_background"
            android:orientation="vertical"
            android:id="@+id/ll_kitchen_mesh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:padding="5dp"
                android:layout_weight="0.3"
                android:text="@string/photwithworkinman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_gravity="center"
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_margin="10dp"
                    android:background="@drawable/bluegradientbuttonshape"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">
                    <ImageView
                        android:id="@+id/btn_kitchen"
                        android:src="@drawable/camera"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:background="@drawable/lin_background"
            android:orientation="vertical"
            android:id="@+id/ll_Store_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:padding="5dp"
                android:layout_weight="0.3"
                android:text="@string/photwithgoods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_gravity="center"
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_margin="10dp"
                    android:background="@drawable/bluegradientbuttonshape"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">
                    <ImageView
                        android:id="@+id/btn_Store_room"
                        android:src="@drawable/camera"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


        <Button
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:padding="10sp"
            android:background="@drawable/bluegradientbuttonshape"
            android:id="@+id/button_ok"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    </ScrollView>


</RelativeLayout>